# try-monty

./: .gitignore  README.md  justfile  pyproject.toml
config/: agent_config.toml  benchmark_config.toml
examples/: create_sample_config.py
src/: benchmark_ruuner.py  monty_ollama_agent.py  ollama_model.py  self_improving_monty_agent.py  self_improving_monty_agent_pydanticai.py
tests/: test_agent_edgecases.py  test_agent_utils.py
