[project]
name = "try-monty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "httpx>=0.28.1",
    "logfire>=4.24.0",
    "loguru>=0.7.3",
    "ollama>=0.6.1",
    "pandas>=3.0.0",
    "pydantic-ai>=1.59.0",
    "pydantic-monty>=0.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
